--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "node --watch src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "mongoose": "^8.10.1",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
-  }
+  },
+  "description": ""
 }
